core-plugins/src/test/resources/scraper/plugins/core/typechecker/ok/specialize.yf
---
name: complex
graphs:
  start:
    # jsonobj :: Object
    - type: JsonStringToObject
      jsonString: "someobjectstring"
      jsonObject: "jsonobj"

    # specialize Object -> List<Object>
    - type: Echo
      put: item
      value: "[jsonobj^0]"

